# xmltread

./: .gitignore  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements-dev.txt
.github/workflows/: test.yml
tests/: test_orig.py  test_utils.py
xmltread/: __init__.py  seeder.py  utils.py  xmltramp.py
